--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -5,5 +5,7 @@
 		<div class="post-content">{{ .Content | safeHTML }}</div>
 
 		<p class="meta">Posted on <span class="postdate">{{ .Date.Format "02. January 2006" }}</span></p>
+
+        {{ partial "social-share.html" . }}
 	</article>
 {{ end }}
