--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -28,6 +28,7 @@
 
 			<div id="content">
 				{{ block "main" . }}{{ end }}
+                {{ partial "subscribe.html" . }}
 			</div>
 
 			<footer id="footer">
